presentation  des projets premiere phase

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav-bar">
             <div class="nav-marque">
-                <h2>issa niang</h2>
+                <h2 class="h2">issa niang</h2>
             </div>
             <div class="nav-links">
                 <ul>
@@ -25,7 +25,7 @@
     <main class="hero">
         <div class="presentation">
             <div class="me">
-                <h2>hi, i am <br>issa niang.</h2>
+                <h2 class="h2">hi, i am <br>issa niang.</h2>
                 <p>Un développeur front-end basé à Dakar, passionné par la création de sites web accessibles et conviviaux</p>
                 <div class="btn-links">
                     <button type="submit">Contactez-moi <span></span></button>
@@ -38,6 +38,44 @@
                 <picture>
                     <img src="images/profil1.png" alt="profil1">
                 </picture>
+            </div>
+        </div>
+        <div class="projet">
+            <h2>projets mis en avant</h2>
+            <p>Voici une sélection de projets qui illustrent ma passion pour le <br> développement front-end.</p>
+            <div class="container-grid">
+                <div class="projet1 capture">
+                    <img src="images/partie1.png" alt="">
+                </div>
+                <div class="projet2">
+                    <h3>Réalisation d'un site statique</h3>
+                    <p>J'ai eu à travailler sur un projet de mise en place d'un landing page avec seulement HTML et CSS. Ce site met en avant un programme d'accompagnement des PME et Startups dans le monde digital grace à des soloutions innovantes.</p>
+                    <p class="info-projet">INFORMATIONS SUR LE PROJET</p>
+                    <div class="info-projet">
+                        <p>Année</p>
+                        <p>2026</p>
+                    </div>
+                    <div class="info-projet">   
+                        <p>Role</p>
+                        <p>Developpeur Front-end</p>
+                    </div>
+                    <ul>
+                        <li><a href="">DÈMO <i class="fa-solid fa-arrow-right"></i></a></li>
+                        <li><a href="">GITHUB <i class="fa-brands fa-github"></i></a></li>
+                    </ul>
+                </div>
+                <div class="projet3 capture">
+                    <img src="images/login.png" alt="">
+                </div>
+                <div class="projet4">
+
+                </div>
+                <div class="projet5 capture">
+                    <img src="images/register.png" alt="">
+                </div>
+                <div class="projet6">
+
+                </div>
             </div>
         </div>
     </main>
