finition de la partie presentation et à propos

--- a/index.html
+++ b/index.html
@@ -67,18 +67,61 @@
                 <div class="projet3 capture">
                     <img src="images/login.png" alt="">
                 </div>
-                <div class="projet4">
-
+                <div class="projet4 projet2">
+                    <h3>Réalisation d'un site statique</h3>
+                    <p>J'ai eu à travailler sur un projet de mise en place d'un landing page avec seulement HTML et CSS. Ce site met en avant un programme d'accompagnement des PME et Startups dans le monde digital grace à des soloutions innovantes.</p>
+                    <p class="info-projet">INFORMATIONS SUR LE PROJET</p>
+                    <div class="info-projet">
+                        <p>Client</p>
+                        <p>Web login</p> 
+                    </div>
+                    <div class="info-projet">
+                        <p>Année</p>
+                        <p>2026</p>
+                    </div>
+                    <div class="info-projet">  
+                        <p>Role</p>
+                        <p>Developpeur Front-end</p>
+                    </div>
+                    <ul>
+                        <li><a href="">DÈMO <i class="fa-solid fa-arrow-right"></i></a></li>
+                    </ul>
                 </div>
                 <div class="projet5 capture">
                     <img src="images/register.png" alt="">
                 </div>
-                <div class="projet6">
-
+                <div class="projet6 projet2">
+                    <h3>Réalisation d'un site statique</h3>
+                    <p>J'ai eu à travailler sur un projet de mise en place d'un landing page avec seulement HTML et CSS. Ce site met en avant un programme d'accompagnement des PME et Startups dans le monde digital grace à des soloutions innovantes.</p>
+                    <p class="info-projet">INFORMATIONS SUR LE PROJET</p>
+                    <div class="info-projet">
+                        <p>Année</p>
+                        <p>2026</p>
+                    </div>
+                    <div class="info-projet">   
+                        <p>Role</p>
+                        <p>Developpeur Front-end</p>
+                    </div>
+                    <ul>
+                        <li><a href="">DÈMO <i class="fa-solid fa-arrow-right"></i></a></li>
+                        <li><a href="">GITHUB <i class="fa-brands fa-github"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
+        <div class="propos">
+            <h2 class="moi-propos">À propos de moi</h2>
+            <div class="moi-contenu">
+                <p>Je suis un développeur basé à DAKAR, avec une formation en Réseaux et Télécommunication.</p>
+            <p class="info-moi">Je suis un développeur front-end basé à DAKAR, à la recherche d'opportunités stimulantes. Avec une formation en Réseaux et Télécommunication. Je mets un point d'honneur à privilégier l'accessibilité lors du développement. Passionné et curieux j'aime résoudre des problèmes complexes.</p>
+            <p  class="info-moi">Actuellement, j'explore Git/GitHub, Python et JavaScript et m'initie également au design avec Figma et Canva. En dehors du codage, j'aime jouer au football, les jeux vidèos et l'auto-didacte. Je continue à apprendre pour acquérir de nouvelles competences et évoluer dans la tech.</p>
+            <a href="">en savoir plus sur moi</a>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class=""></div>
+        <div class=""></div>
+    </footer>
 </body>
 </html>
