--- a/index.html
+++ b/index.html
@@ -120,8 +120,29 @@
         </div>
     </main>
     <footer>
-        <div class=""></div>
-        <div class=""></div>
+        <div class="mail-link">
+            <h2 class="h2">Entrons en Contact</h2>
+            <p>Dites bonjour à <a href="mailto:niangissa705@gmail.com" id="mail">niangissa705@gmail.com</a></p>
+            <a href="http://"><i class="fa-brands fa-linkedin-in"></i></a>
+             <a href="http://"><i class="fa-brands fa-github"></i></a>
+             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+             <a href=""><i class="fa-brands fa-instagram"></i></a>
+
+        </div>
+        <div class="contact">
+            <form action="">
+                <label for="">Nom Complet</label>
+                <input type="text" placeholder="John Doe">
+                <label for="">Email</label>
+                <input type="email">
+                <label for="">Sujet</label>
+                <input type="text">
+                <label for="">Message</label>
+                <textarea name="" id=""></textarea>
+                <input type="submit" value="Envoyer">
+
+            </form>
+        </div>
     </footer>
 </body>
 </html>
