finir le footer et mettre en place le responsive

--- a/index.html
+++ b/index.html
@@ -119,14 +119,17 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="mail-link">
             <h2 class="h2">Entrons en Contact</h2>
-            <p>Dites bonjour à <a href="mailto:niangissa705@gmail.com" id="mail">niangissa705@gmail.com</a></p>
-            <a href="http://"><i class="fa-brands fa-linkedin-in"></i></a>
-             <a href="http://"><i class="fa-brands fa-github"></i></a>
-             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-             <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <p>Dites bonjour à <a href="mailto:niangissa705@gmail.com" id="mail"><span>niangissa705@gmail.com</span></a></p>
+            <p>Pour en sqvoir plus voici mon.. <a href=""><span>cv</span></a></p>
+            <div class="lien-reseaux">
+                <a href="http://"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="http://"><i class="fa-brands fa-github"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </div>
 
         </div>
         <div class="contact">
@@ -143,6 +146,7 @@
 
             </form>
         </div>
+        <p class="copyright">&copy; 2026 Issa Niang</p>
     </footer>
 </body>
 </html>
