changement de photo de profil et ajout de about.html et des animations

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div class="nav-links">
                 <ul>
                     <li><a href="">Projets</a></li>
-                    <li><a href="">À propos</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="about.html">À propos</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     
                 </ul>
             </div>
@@ -60,7 +60,7 @@
         
             <div class="picture">
                 <picture>
-                    <img src="images/profil1.png" alt="profil1">
+                    <img src="images/photo-pro.png" alt="profil1">
                 </picture>
             </div>
         </div>
@@ -92,7 +92,7 @@
                     <img src="images/login.png" alt="">
                 </div>
                 <div class="projet4 projet2">
-                    <h3>Réalisation d'un site statique</h3>
+                    <h3>Réalisation d'une page de connexion</h3>
                     <p>J'ai eu à travailler sur un projet de mise en place d'un landing page avec seulement HTML et CSS. Ce site met en avant un programme d'accompagnement des PME et Startups dans le monde digital grace à des soloutions innovantes.</p>
                     <p class="info-projet">INFORMATIONS SUR LE PROJET</p>
                     <div class="info-projet">
@@ -115,7 +115,7 @@
                     <img src="images/register.png" alt="">
                 </div>
                 <div class="projet6 projet2">
-                    <h3>Réalisation d'un site statique</h3>
+                    <h3>Réalisation d'une page de creation de compte</h3>
                     <p>J'ai eu à travailler sur un projet de mise en place d'un landing page avec seulement HTML et CSS. Ce site met en avant un programme d'accompagnement des PME et Startups dans le monde digital grace à des soloutions innovantes.</p>
                     <p class="info-projet">INFORMATIONS SUR LE PROJET</p>
                     <div class="info-projet">
@@ -156,16 +156,16 @@
             </div>
 
         </div>
-        <div class="contact">
+        <div class="contact" id="contact">
             <form action="">
                 <label for="">Nom Complet</label>
                 <input type="text" placeholder="John Doe">
                 <label for="">Email</label>
-                <input type="email">
+                <input type="email" placeholder="example@gmail.com">
                 <label for="">Sujet</label>
-                <input type="text">
+                <input type="text" placeholder="Ex: portofolio">
                 <label for="">Message</label>
-                <textarea name="" id=""></textarea>
+                <textarea name="" id="" placeholder="Que puis-je faire pour vous 😁"></textarea>
                 <input type="submit" value="Envoyer">
 
             </form>
