Ajout d'animation scale sur image et du viewport height

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="">Projets</a></li>
+                    <li><a href="#projets">Projets</a></li>
                     <li><a href="about.html">À propos</a></li>
                     <li><a href="#contact">Contact</a></li>
                     
@@ -26,9 +26,9 @@
             </div>
             <div class="menu-links">
                  <ul>
-                    <li><a href="">Projets</a></li>
-                    <li><a href="">À propos</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#projets">Projets</a></li>
+                    <li><a href="about.html">À propos</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -64,7 +64,7 @@
                 </picture>
             </div>
         </div>
-        <div class="projet">
+        <div class="projet" id="projets">
             <h2>projets mis en avant</h2>
             <p>Voici une sélection de projets qui illustrent ma passion pour le <br> développement front-end.</p>
             <div class="container-grid">
@@ -72,7 +72,7 @@
                     <img src="images/partie1.png" alt="">
                 </div>
                 <div class="projet2">
-                    <h3>Réalisation d'un site statique</h3>
+                    <h3>Réalisation d'un site vitrine</h3>
                     <p>J'ai eu à travailler sur un projet de mise en place d'un landing page avec seulement HTML et CSS. Ce site met en avant un programme d'accompagnement des PME et Startups dans le monde digital grace à des soloutions innovantes.</p>
                     <p class="info-projet">INFORMATIONS SUR LE PROJET</p>
                     <div class="info-projet">
@@ -85,7 +85,7 @@
                     </div>
                     <ul>
                         <li><a href="">DÈMO <i class="fa-solid fa-arrow-right"></i></a></li>
-                        <li><a href="">GITHUB <i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="" title="depot-github">GITHUB <i class="fa-brands fa-github"></i></a></li>
                     </ul>
                 </div>
                 <div class="projet3 capture">
@@ -128,7 +128,7 @@
                     </div>
                     <ul>
                         <li><a href="">DÈMO <i class="fa-solid fa-arrow-right"></i></a></li>
-                        <li><a href="">GITHUB <i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="" title="depot-github">GITHUB <i class="fa-brands fa-github"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                 <label for="">Sujet</label>
                 <input type="text" placeholder="Ex: portofolio">
                 <label for="">Message</label>
-                <textarea name="" id="" placeholder="Que puis-je faire pour vous 😁"></textarea>
+                <textarea name="" id="" placeholder="Que puis-je faire pour vous 😁?"></textarea>
                 <input type="submit" value="Envoyer">
 
             </form>
