mise en place de la responsivite de about et l'ajout des parties competences experiences et du footer

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <h2>à propos de moi</h2>
             </div>
             <div class="about">
-                <p>Je suis un développeur basé à DAKAR, avec une formation en Réseaux et Télécommunication.</p>
+                <p class="mon-role">Je suis un développeur basé à DAKAR, avec une formation en Réseaux et Télécommunication.</p>
                 <p class="info-moi">Je suis un développeur front-end basé à DAKAR, à la recherche d'opportunités stimulantes. Avec une formation en Réseaux et Télécommunication. Je mets un point d'honneur à privilégier l'accessibilité lors du développement. Passionné et curieux j'aime résoudre des problèmes complexes.</p>
                 <p  class="info-moi">Actuellement, j'explore Git/GitHub, Python et JavaScript et m'initie également au design avec Figma et Canva. En dehors du codage, j'aime jouer au football, les jeux vidèos et l'auto-didacte. Je continue à apprendre pour acquérir de nouvelles competences et évoluer dans la tech.</p>
 
@@ -66,7 +66,56 @@
         <section class="photo">
             <img src="images/chill.png" alt="">
         </section>
-        
+        <section class="competence">
+            <div class="titre-about">
+                <h2>mes compétences</h2>
+            </div>
+            <div class="skill">
+                <p>Je suis toujours à la recherche de nouvelles compétences à développer.J'aime relever des nouveaux défis, apprendre des technologies variées et enrichir continuellement mon savoir-faire pour proposer des solutions modernes et efficaces</p>
+                <div class="skills-rep">
+                    <span>html</span><span>css</span><span>JavaScript</span><span>python</span><span>linux</span><span>canva</span><span>Réseaux</span><span>Sécurité</span>
+                </div>
+            </div>
+        </section>
+        <section class="experience">
+            <h2 class="titre-about">mon expérience</h2>
+            <div class="exp">
+                <div class="en-tete">
+                    <h2>Stagiaire  chez Xarala</h2>
+                    <p>Jan 2026 - Present</p>
+                </div>
+                <p class="description">Xarala est une plateforme éducative panafricaine qui propose des formations de qualité répondant à la demande du marché. J'y suis une formation en Developpement Web Full Stack avev des mentors qualifiés et qui me pousse vers la reussite.</p>
+            </div>
+        </section>
+        <footer class="footer footer-about">
+        <div class="mail-link">
+            <h2 class="h2-about">Entrons en Contact</h2>
+            <p>Dites bonjour à <a href="mailto:niangissa705@gmail.com" id="mail"><span>niangissa705@gmail.com</span></a></p>
+            <p>Pour en sqvoir plus voici mon.. <a href=""><span>cv</span></a></p>
+            <div class="lien-reseaux">
+                <a href="http://"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="http://"><i class="fa-brands fa-github"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </div>
+
+        </div>
+        <div class="contact" id="contact">
+            <form action="">
+                <label for="">Nom Complet</label>
+                <input type="text" placeholder="John Doe">
+                <label for="">Email</label>
+                <input type="email" placeholder="example@gmail.com">
+                <label for="">Sujet</label>
+                <input type="text" placeholder="Ex: portofolio">
+                <label for="">Message</label>
+                <textarea name="" id="" placeholder="Que puis-je faire pour vous 😁?"></textarea>
+                <input type="submit" value="Envoyer">
+
+            </form>
+        </div>
+        <p class="copyright">&copy; 2026 Issa Niang</p>
+    </footer>
     </main>
 </body>
 </html>
